infra/k8s/backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gcr.io/wiz-test-426311/backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip-srv
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 4000
      targetPort: 4000
